# kentech-multibot

./: .gitignore  .npmrc  BOT-DEPLOYMENT.md  CONTRIBUTING.md  DEPLOYMENT.md  Dockerfile  GIT-COMMANDS.md  GITHUB_SETUP.md  LICENSE  PAIRING-CODE-GUIDE.md  README.md  REPOSITORY-UPLOAD-COMMANDS.md  SESSION-GENERATOR-DEPLOYMENT.md  SESSION-GENERATOR-README.md  UPLOAD-STATUS.md  VERCEL-DEPLOY.md  VERCEL-FIX.md  VPS-QUICK-DEPLOY.md  app.json  clean-deploy-setup.bat  config.env.example  config.js  config.json.example  deploy.sh  deployment-checker.sh  generate-session.js  index.html  index.js  kentech-session-generator.html  kentech-session-server.js  kentech-session-static.html  netlify.toml  package-lock.json  package.json  pairing-code.js  quick-deploy.sh  session-gen.js  session-generator.html  session-server.js  upload-to-github.bat  (+2 more)
kentech-pairing-app/: .env.example  README.md  STARTUP.md  init_db.py  main.py  pyproject.toml  requirements.txt  run_app.py  start.bat
kentech-pairing-app/.github/: copilot-instructions.md
kentech-pairing-app/examples/: api_demo.py  example_bot.py  simple_bot_client.py
kentech-pairing-app/src/api/: routes.py  websockets.py
kentech-pairing-app/src/bots/: manager.py  models.py
kentech-pairing-app/src/config/: database.py  settings.py
kentech-pairing-app/src/kentech_pairing_app.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
kentech-pairing-app/src/monitoring/: health.py
kentech-pairing-app/static/: app.js  index.html
kentech-pairing-app/tests/: __init__.py  conftest.py
lang/: ar.json  bn.json  (+8 more)
(+19 files in other folders)
